--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 h1 { font-family: monospace; }
+p { font-family: monospace; }
+p {font-size: 25px}
+h1 {text-align: center}
 h1 { font-size: 80px; }
+h2 {text-align: center}
+h3 {font-size: 30px}
+h4 {font-size: 30px}
 body {
   background-color: #E6E6FA;
 }
